--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col col-md-4 col-xl-2 col-xs-12 mt-4">
 <!--TOOLTIP-->
-                    <a class="btn btn-lg bg-info text-white text-wrap" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <a class="btn btn-lg bg-info text-white text-wrap" id="reserveButton">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <!--All content goes in this div-->
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <!--X Button to close the form-->
@@ -114,7 +114,7 @@
                 </ul>
 <!--MODAL (login button to login form in the navbar)-->
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="loginButton">
 <!--Font Awesome sign-in button-->
                         <i class="fa fa-sign-in"></i>Login
                     </a>
